# Rooftop-Solar-LV-Grid-Congestion-Digital-Twin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example_small.yaml  oudewater.yaml
docs/: P0.md  P0_5.md  P1.md  architecture.md  architecture.mmd
scripts/: explore.py
src/rsgt/: __init__.py  __main__.py  cli.py
src/rsgt/config/: __init__.py  loader.py  schema.py
src/rsgt/explore/: __init__.py  interactive.py  plots.py  profile.py  report.py  run.py
src/rsgt/export/: __init__.py  deckgl.py  geojson.py
src/rsgt/geo/: __init__.py  crs.py
src/rsgt/geometry/: __init__.py  cityjson.py  roof_planes.py
src/rsgt/ingest/: __init__.py  ahn.py  aoi.py  bag.py  bag3d.py  capacity.py  clients.py  download.py  manifest.py  pc6.py  pipeline.py  vector.py
src/rsgt/solar/: __init__.py  pipeline.py  resource.py  yield_model.py
src/rsgt/validate/: __init__.py  pvgis_check.py
tests/: conftest.py  test_aoi.py  test_bag3d.py  test_clients.py  test_config.py  test_crs.py  test_explore.py  test_export.py  test_geometry.py  test_live_smoke.py  test_manifest.py  test_pipeline.py  test_solar_live.py  test_vector.py  test_yield.py
