[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsgt"
version = "0.0.1"
description = "Rooftop Solar -> LV Grid Congestion Digital Twin (rsgt)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "arun" }]
keywords = ["solar", "pv", "grid", "congestion", "gis", "netherlands", "3dbag", "ahn"]

# Core deps are deliberately light: the config/manifest/HTTP layer must import
# without the heavy geo stack. The geospatial work (P0 ingest onwards) needs the
# [geo] extra. See docs/P0.md.
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "tqdm>=4.64",
]

[project.optional-dependencies]
geo = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.5",
    "rasterio>=1.3",
    "pyogrio>=0.7",
    "numpy>=1.24",
    "pandas>=2.0",
]
viz = [
    # P0.5 explore step: static figures for the insight report (matplotlib drives
    # geopandas' .plot and the raster previews) + an interactive Leaflet map (folium).
    "matplotlib>=3.7",
    "folium>=0.15",
]
solar = [
    "pvlib>=0.10",
]
dashboard = [
    # Optional FastAPI serving tier (only if live scenario queries are wanted).
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.24",
    "ruff>=0.4",
]

[project.scripts]
rsgt = "rsgt.cli:main"

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://github.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/rsgt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-ra"
markers = [
    "network: tests that require live internet access to Dutch open-data services",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
